--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -20,9 +20,21 @@
 <!-- See storage config details at http://source.android.com/tech/storage/ -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- internal emulated storage -->
-    <storage
-        android:storageDescription="@string/storage_internal"
-        android:emulated="true"
-        android:mtpReserve="100" />
+    <!-- internal sdcard -->
+    <storage android:mountPoint="/storage/sdcard0"
+             android:storageDescription="@string/storage_internal"
+             android:primary="true"
+             android:emulated="true"
+             android:mtpReserve="100" />
+    <!-- external sdcard -->
+    <storage android:mountPoint="/storage/sdcard1"
+             android:storageDescription="@string/storage_sd_card"
+             android:primary="false"
+             android:removable="true"
+             android:allowMassStorage="false" />
+    <!-- USB otg -->
+    <storage android:mountPoint="/storage/usbdisk0"
+             android:storageDescription="@string/storage_usb"
+             android:primary="false"
+             android:removable="true" /
 </StorageList>
