finish cfx cleanup

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -36,5 +36,5 @@
     <storage android:mountPoint="/storage/usbdisk0"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="true" /
+             android:removable="true" />
 </StorageList>
