--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -31,7 +31,10 @@
              android:storageDescription="@string/storage_sd_card"
              android:primary="false"
              android:removable="true"
+             android:allowMassStorage="true"
+             android:maxFileSize="4096"
              android:allowMassStorage="false" />
+</StorageList>
     <!-- USB otg -->
     <storage android:mountPoint="/storage/usbdisk0"
              android:storageDescription="@string/storage_usb"
